# ts-benchmark-viz

./: .gitignore  Dockerfile  README.md  about.md  app.py  docker-compose.yml  generate_forecasts.py  pyproject.toml
benchmarks/fev_bench/: foundation_fails.yaml
benchmarks/fev_bench/results/: autoar.csv  autoarima.csv  autoets.csv  catboost.csv  chronos-2.csv  chronos-bolt.csv  lightgbm.csv  naive.csv  seasonal_naive.csv
examples/autoar/: evaluate_model.py
examples/chronos/: evaluate_model.py
examples/chronos-2/: evaluate_model.py
examples/mlforecast/: evaluate_model.py  requirements.txt
examples/statsforecast/: evaluate_model.py
notebooks/: fev_comparison.ipynb  remove_bad_tasks.ipynb
templates/: index.html
